@@ -4,7 +4,8 @@ Changelog
 1.0.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- onegov_edu_workflow: Added delete permission to editor in state Intern.
+  [lknoepfel]
 
 
 1.0.2 (2014-07-10)
